# sframe

./: CMakeLists.txt  vcpkg.json
src/: crypto.cpp  crypto.h
test/: CMakeLists.txt
